services/darklang-namespace/darklang-namespace.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: darklang
  labels:
    name: darklang
