services/darklang-namespace/networkpolicy-allow-kube-dns.yaml
# Adds a rule to allow access to kubedns. Add `egress-allow-kube-dns: "true"` to a
# pod to enable

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-kube-dns
  namespace: darklang
spec:
  policyTypes:
    - Egress
  podSelector:
    matchLabels:
      egress-allow-kube-dns: "true"
  # Allow access to kube-dns so that dns discovery keeps working
  egress:
    - to:
        - namespaceSelector:
            matchLabels:
              k8s-namespace: kube-system
          podSelector:
            matchExpressions:
              - key: k8s-app
                operator: In
                values: ["kube-dns", "node-local-dns"]
      ports:
        - protocol: TCP
          port: 53
        - protocol: UDP
          port: 53
