services/darklang-namespace/networkpolicy-default-deny.yaml
# Adds a default to deny all ingress and egress traffic for the entire darklang
# namespace. This is activated for all pods in the namespace and is the default. Pods
# need to explicitly opt-in to ingress/egress rules to allow traffic in or out,
# either by creating their own network policies, or by adding the tags for the other
# network policies in this directory.

kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny
  namespace: darklang
spec:
  policyTypes:
    - Ingress
    - Egress
  # No namespaceSelector so this is only for the darklang namespace
  podSelector: { }
  # Note: this even blocks access kube-dns, see networkpolicy-allow-kube-dns for details
  egress: []
  ingress: []
